2004-07-08  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_error_func):
	  make reentrant (= allow removing elements in error handler)

2004-07-08  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/gstpad.c: (gst_pad_event_default_dispatch),
	(gst_pad_send_event), (gst_pad_call_chain_function):
	  events sent to elements below PAUSED cannot be handled, so
	  don't try to

2004-07-08  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c:
	(chain_recursively_migrate_group), (create_group),
	(schedule_group), (gst_opt_scheduler_pad_link),
	(group_elements_set_visited), (element_get_reachables_func),
	(element_get_reachables), (group_can_reach_group), (debug_element),
	(rechain_group), (group_migrate_connected),
	(gst_opt_scheduler_pad_unlink):
	* testsuite/schedulers/Makefile.am:
	Implemented group splitting and rechaining.
	Fixes 143777 and 143777-2 in the testsuite.

2004-07-08  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/autoplug/gstspideridentity.c: (gst_spider_identity_chain):
	  extra debugging
	* gst/gstevent.h:
	* gst/gstinfo.c: (gst_debug_log_default):
	  print time nicely.  add thread pointer until someone figures out
	  a completely portable way of getting at thread id's.
	* gst/gstpad.c: (gst_pad_set_active), (gst_pad_link_try),
	(_invent_event), (gst_pad_pull), (gst_pad_event_default_dispatch),
	(gst_pad_call_chain_function):
	  extra debugging
	* gst/schedulers/gstoptimalscheduler.c:
	(get_group_schedule_function), (loop_group_schedule_function),
	(gst_opt_scheduler_loop_wrapper), (gst_opt_scheduler_get_wrapper),
	(pad_clear_queued), (gst_opt_scheduler_iterate):
	  rename BUFPEN and friends to DATAPEN since that's what they are.

2004-07-07  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/autoplug/gstspideridentity.c: (gst_spider_identity_chain):
	* gst/gstbuffer.h:
	* gst/gstpad.c:
	  cleanups and debugging
