@@ -1,3 +1,13 @@
+2004-07-09  Wim Taymans  <wim@fluendo.com>
+
+	* gst/schedulers/gstoptimalscheduler.c:
+	(gst_opt_scheduler_pad_link), (group_elements_set_visited),
+	(element_get_reachables_func), (element_get_reachables),
+	(debug_element), (rechain_group), (group_migrate_connected),
+	(gst_opt_scheduler_pad_unlink):
+	Do not try to migrate decoupled elements to a new group since
+	they are not added to groups.
+
 2004-07-08  Benjamin Otte  <otte@gnome.org>
 
 	* gst/gstelement.c: (gst_element_error_func):
